# livewebcam

./: .gitignore  Makefile  README.md  install.sh  pyproject.toml
examples/: webcam_activated.sh  webcam_deactivated.sh
livewebcam/: __init__.py  __main__.py  logutil.py  monitor.py  monitor_darwin.py  monitor_linux.py  ui.py
scripts/: camera_probe_macos.py
